--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,12 @@ temp/
 # Cache directories
 .cache/
 .parcel-cache/
+.astro/
 
 # Coverage directory used by tools like istanbul
 coverage/
 
 # nyc test coverage
 .nyc_output 
+
+.claude
