--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "author": "Community Project",
     "license": "MIT",
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^8.44.0",
+        "@typescript-eslint/parser": "^8.44.0",
         "@astrojs/check": "^0.9.6",
         "@eslint/js": "^10.0.1",
         "astro": "^5.18.0",
