--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,63 +1,63 @@
 name: CI Quality Gate
 
 on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
+    push:
+        branches: [main, master]
+    pull_request:
+        branches: [main, master]
 
 jobs:
-  quality-gate:
-    name: Format, Lint, Check, Test, Build & Audit
-    runs-on: ubuntu-latest
+    quality-gate:
+        name: Format, Lint, Check, Test, Build & Audit
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v5
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: '20'
+                  cache: 'npm'
 
-      - name: Install dependencies
-        run: npm ci
+            - name: Install dependencies
+              run: npm ci
 
-      - name: Check formatting
-        run: npm run format:check
+            - name: Check formatting
+              run: npm run format:check
 
-      - name: Run linter
-        run: npm run lint
+            - name: Run linter
+              run: npm run lint
 
-      - name: Run type/content checks
-        run: npm run check
+            - name: Run type/content checks
+              run: npm run check
 
-      - name: Run tests
-        run: npm run test
+            - name: Run tests
+              run: npm run test
 
-      - name: Run build
-        run: npm run build
+            - name: Run build
+              run: npm run build
 
-      - name: Validate built HTML routes exist
-        run: |
-          required_files=(
-            "dist/index.html"
-            "dist/faq/index.html"
-            "dist/lines/index.html"
-            "dist/pricing/index.html"
-            "dist/updates/index.html"
-            "dist/airport/index.html"
-          )
+            - name: Validate built HTML routes exist
+              run: |
+                  required_files=(
+                    "dist/index.html"
+                    "dist/faq/index.html"
+                    "dist/lines/index.html"
+                    "dist/pricing/index.html"
+                    "dist/updates/index.html"
+                    "dist/airport/index.html"
+                  )
 
-          for file in "${required_files[@]}"; do
-            if [ ! -f "$file" ]; then
-              echo "Missing required built HTML file: $file"
-              exit 1
-            fi
-          done
+                  for file in "${required_files[@]}"; do
+                    if [ ! -f "$file" ]; then
+                      echo "Missing required built HTML file: $file"
+                      exit 1
+                    fi
+                  done
 
-          echo "All required built HTML files present"
+                  echo "All required built HTML files present"
 
-      - name: Security audit
-        run: npm run audit
+            - name: Security audit
+              run: npm run audit
